--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ subjects:
 - !lcc 'HX'
 - !lcsh 'Dühring, E. (Eugen), 1833-1921'
 - !lcsh 'Philosophy'
+- GITenberg
 title: 'Landmarks of Scientific Socialism: "Anti-Duehring"'
 url: http://www.gutenberg.org/ebooks/31933
